mise en place npm

--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -1,9 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 html {
     font-size: 62.5%;
 }
@@ -11,4 +5,24 @@ html {
 body {
     width: 100vw;
     height: 100vh;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 10%;
+}
+
+.fa-plus-square, .fa-portrait {
+    color: purple;
+    font-size: 2rem;
+}
+
+.fa-portrait {
+    background-color: #d3d231;
 }
