--- a/public/assets/css/principal.css
+++ b/public/assets/css/principal.css
@@ -1,9 +1,12 @@
+
+
 #form, form , #display{
-    display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    width: 100%;
+    width: 95%;
+}
+
+#menuLog a{
+width: 100%;
 }
 
 .link {
@@ -21,4 +24,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
