--- a/public/assets/css/addLink.css
+++ b/public/assets/css/addLink.css
@@ -3,3 +3,16 @@
     flex-direction: column;
     align-items: self-end;
 }
+#addLink > form > div {
+    margin: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+#display {
+    justify-content: center;
+    padding: 2rem;
+}
