--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -67,3 +67,38 @@ h1 {
     text-transform: uppercase;
     font-size: 3rem;
 }
+
+i {
+    margin-right: 1rem;
+}
+
+a {
+    text-decoration-line: none;
+}
+
+.margin-bottom{
+    margin-bottom:  1rem;
+}
+
+.border {
+    border: cornflowerblue solid 1px;
+    border-radius: 10px;
+}
+
+.borderRed {
+    border: crimson solid 1px;
+    border-radius: 10px;
+}
+
+.padding {
+    padding: 1rem;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.space-between, .flex-end{
+    display: flex;
+    flex-direction: row;
+}
